final/syntatic_tree/parser.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: declaration
    5          | attribution
    6          | if_statement
    7          | loop_statement
    8          | return_statement
    9          | function

   10 declaration: type id_list ';'
   11            | type function
   12            | type attribution

   13 type: TYPE

   14 id_list: identifier
   15        | id_list ',' identifier

   16 identifier: ID
   17           | ID '[' NUM ']'

   18 function: ID '(' parameter_list_opt ')' '{' statement_list '}'
   19         | ID '(' parameter_list_opt ')' ';'

   20 parameter_list_opt: parameter_list
   21                   | ε

   22 parameter_list: parameter
   23               | parameter_list ',' parameter

   24 parameter: type ID
   25          | expression

   26 attribution: identifier '=' expression ';'
   27            | identifier ASSIGN_OP expression
   28            | identifier INC_DEC_OP

   29 if_statement: IF '(' comparison ')' '{' statement_list '}' ELSE '{' statement_list '}'
   30             | IF '(' comparison ')' '{' statement_list '}'

   31 comparison: expression RELATIONAL_OP expression
   32           | comparison LOGICAL_OP comparison
   33           | identifier
   34           | function

   35 loop_statement: WHILE '(' comparison ')' '{' statement_list '}'

   36 return_statement: RETURN expression ';'
   37                 | RETURN ';'

   38 expression: NUM
   39           | STRING_LITERAL
   40           | identifier
   41           | expression '+' expression
   42           | expression '-' expression
   43           | expression '*' expression
   44           | expression '/' expression
   45           | expression BITWISE_OP expression
   46           | identifier INC_DEC_OP
   47           | PREPROCESSOR_OP expression
   48           | UNARY_OP expression
   49           | expression TERNARY_OP expression ':' expression
   50           | '(' expression ')'
   51           | '{' expression_list '}'
   52           | function

   53 expression_list: expression
   54                | expression_list ',' expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 19 29 30 35 50
    ')' (41) 18 19 29 30 35 50
    '*' (42) 43
    '+' (43) 41
    ',' (44) 15 23 54
    '-' (45) 42
    '/' (47) 44
    ':' (58) 49
    ';' (59) 10 19 26 36 37
    '=' (61) 26
    '[' (91) 17
    ']' (93) 17
    '{' (123) 18 29 30 35 51
    '}' (125) 18 29 30 35 51
    error (256)
    ID <str> (258) 16 17 18 19 24
    NUM <str> (259) 17 38
    RELATIONAL_OP <str> (260) 31
    TYPE <str> (261) 13
    STRING_LITERAL <str> (262) 39
    IF (263) 29 30
    ELSE (264) 29
    WHILE (265) 35
    RETURN (266) 36 37
    LOGICAL_OP <str> (267) 32
    BITWISE_OP <str> (268) 45
    ASSIGN_OP <str> (269) 27
    INC_DEC_OP <str> (270) 28 46
    PREPROCESSOR_OP <str> (271) 47
    UNARY_OP <str> (272) 48
    TERNARY_OP <str> (273) 49


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program <node> (34)
        on left: 1
        on right: 0
    statement_list <node> (35)
        on left: 2 3
        on right: 1 3 18 29 30 35
    statement <node> (36)
        on left: 4 5 6 7 8 9
        on right: 2 3
    declaration <node> (37)
        on left: 10 11 12
        on right: 4
    type <node> (38)
        on left: 13
        on right: 10 11 12 24
    id_list <node> (39)
        on left: 14 15
        on right: 10 15
    identifier <node> (40)
        on left: 16 17
        on right: 14 15 26 27 28 33 40 46
    function <node> (41)
        on left: 18 19
        on right: 9 11 34 52
    parameter_list_opt <node> (42)
        on left: 20 21
        on right: 18 19
    parameter_list <node> (43)
        on left: 22 23
        on right: 20 23
    parameter <node> (44)
        on left: 24 25
        on right: 22 23
    attribution <node> (45)
        on left: 26 27 28
        on right: 5 12
    if_statement <node> (46)
        on left: 29 30
        on right: 6
    comparison <node> (47)
        on left: 31 32 33 34
        on right: 29 30 32 35
    loop_statement <node> (48)
        on left: 35
        on right: 7
    return_statement <node> (49)
        on left: 36 37
        on right: 8
    expression <node> (50)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 25 26 27 31 36 41 42 43 44 45 47 48 49 50 53 54
    expression_list <node> (51)
        on left: 53 54
        on right: 51 54


State 0

    0 $accept: • program $end

    ID      shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    program           go to state 6
    statement_list    go to state 7
    statement         go to state 8
    declaration       go to state 9
    type              go to state 10
    identifier        go to state 11
    function          go to state 12
    attribution       go to state 13
    if_statement      go to state 14
    loop_statement    go to state 15
    return_statement  go to state 16


State 1

   16 identifier: ID •
   17           | ID • '[' NUM ']'
   18 function: ID • '(' parameter_list_opt ')' '{' statement_list '}'
   19         | ID • '(' parameter_list_opt ')' ';'

    '['  shift, and go to state 17
    '('  shift, and go to state 18

    $default  reduce using rule 16 (identifier)


State 2

   13 type: TYPE •

    $default  reduce using rule 13 (type)


State 3

   29 if_statement: IF • '(' comparison ')' '{' statement_list '}' ELSE '{' statement_list '}'
   30             | IF • '(' comparison ')' '{' statement_list '}'

    '('  shift, and go to state 19


State 4

   35 loop_statement: WHILE • '(' comparison ')' '{' statement_list '}'

    '('  shift, and go to state 20


State 5

   36 return_statement: RETURN • expression ';'
   37                 | RETURN • ';'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    ';'              shift, and go to state 25
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 30


State 6

    0 $accept: program • $end

    $end  shift, and go to state 31


State 7

    1 program: statement_list •
    3 statement_list: statement_list • statement

    ID      shift, and go to state 1
    TYPE    shift, and go to state 2
    IF      shift, and go to state 3
    WHILE   shift, and go to state 4
    RETURN  shift, and go to state 5

    $default  reduce using rule 1 (program)

    statement         go to state 32
    declaration       go to state 9
    type              go to state 10
    identifier        go to state 11
    function          go to state 12
    attribution       go to state 13
    if_statement      go to state 14
    loop_statement    go to state 15
    return_statement  go to state 16


State 8

    2 statement_list: statement •

    $default  reduce using rule 2 (statement_list)


State 9

    4 statement: declaration •

    $default  reduce using rule 4 (statement)


State 10

   10 declaration: type • id_list ';'
   11            | type • function
   12            | type • attribution

    ID  shift, and go to state 1

    id_list      go to state 33
    identifier   go to state 34
    function     go to state 35
    attribution  go to state 36


State 11

   26 attribution: identifier • '=' expression ';'
   27            | identifier • ASSIGN_OP expression
   28            | identifier • INC_DEC_OP

    ASSIGN_OP   shift, and go to state 37
    INC_DEC_OP  shift, and go to state 38
    '='         shift, and go to state 39


State 12

    9 statement: function •

    $default  reduce using rule 9 (statement)


State 13

    5 statement: attribution •

    $default  reduce using rule 5 (statement)


State 14

    6 statement: if_statement •

    $default  reduce using rule 6 (statement)


State 15

    7 statement: loop_statement •

    $default  reduce using rule 7 (statement)


State 16

    8 statement: return_statement •

    $default  reduce using rule 8 (statement)


State 17

   17 identifier: ID '[' • NUM ']'

    NUM  shift, and go to state 40


State 18

   18 function: ID '(' • parameter_list_opt ')' '{' statement_list '}'
   19         | ID '(' • parameter_list_opt ')' ';'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    TYPE             shift, and go to state 2
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    $default  reduce using rule 21 (parameter_list_opt)

    type                go to state 41
    identifier          go to state 28
    function            go to state 29
    parameter_list_opt  go to state 42
    parameter_list      go to state 43
    parameter           go to state 44
    expression          go to state 45


State 19

   29 if_statement: IF '(' • comparison ')' '{' statement_list '}' ELSE '{' statement_list '}'
   30             | IF '(' • comparison ')' '{' statement_list '}'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 46
    function    go to state 47
    comparison  go to state 48
    expression  go to state 49


State 20

   35 loop_statement: WHILE '(' • comparison ')' '{' statement_list '}'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 46
    function    go to state 47
    comparison  go to state 50
    expression  go to state 49


State 21

   38 expression: NUM •

    $default  reduce using rule 38 (expression)


State 22

   39 expression: STRING_LITERAL •

    $default  reduce using rule 39 (expression)


State 23

   47 expression: PREPROCESSOR_OP • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 51


State 24

   48 expression: UNARY_OP • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 52


State 25

   37 return_statement: RETURN ';' •

    $default  reduce using rule 37 (return_statement)


State 26

   50 expression: '(' • expression ')'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 53


State 27

   51 expression: '{' • expression_list '}'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier       go to state 28
    function         go to state 29
    expression       go to state 54
    expression_list  go to state 55


State 28

   40 expression: identifier •
   46           | identifier • INC_DEC_OP

    INC_DEC_OP  shift, and go to state 56

    $default  reduce using rule 40 (expression)


State 29

   52 expression: function •

    $default  reduce using rule 52 (expression)


State 30

   36 return_statement: RETURN expression • ';'
   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    ';'         shift, and go to state 63


State 31

    0 $accept: program $end •

    $default  accept


State 32

    3 statement_list: statement_list statement •

    $default  reduce using rule 3 (statement_list)


State 33

   10 declaration: type id_list • ';'
   15 id_list: id_list • ',' identifier

    ';'  shift, and go to state 64
    ','  shift, and go to state 65


State 34

   14 id_list: identifier •
   26 attribution: identifier • '=' expression ';'
   27            | identifier • ASSIGN_OP expression
   28            | identifier • INC_DEC_OP

    ASSIGN_OP   shift, and go to state 37
    INC_DEC_OP  shift, and go to state 38
    '='         shift, and go to state 39

    $default  reduce using rule 14 (id_list)


State 35

   11 declaration: type function •

    $default  reduce using rule 11 (declaration)


State 36

   12 declaration: type attribution •

    $default  reduce using rule 12 (declaration)


State 37

   27 attribution: identifier ASSIGN_OP • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 66


State 38

   28 attribution: identifier INC_DEC_OP •

    $default  reduce using rule 28 (attribution)


State 39

   26 attribution: identifier '=' • expression ';'

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 67


State 40

   17 identifier: ID '[' NUM • ']'

    ']'  shift, and go to state 68


State 41

   24 parameter: type • ID

    ID  shift, and go to state 69


State 42

   18 function: ID '(' parameter_list_opt • ')' '{' statement_list '}'
   19         | ID '(' parameter_list_opt • ')' ';'

    ')'  shift, and go to state 70


State 43

   20 parameter_list_opt: parameter_list •
   23 parameter_list: parameter_list • ',' parameter

    ','  shift, and go to state 71

    $default  reduce using rule 20 (parameter_list_opt)


State 44

   22 parameter_list: parameter •

    $default  reduce using rule 22 (parameter_list)


State 45

   25 parameter: expression •
   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62

    $default  reduce using rule 25 (parameter)


State 46

   33 comparison: identifier •
   40 expression: identifier •
   46           | identifier • INC_DEC_OP

    INC_DEC_OP  shift, and go to state 56

    LOGICAL_OP  reduce using rule 33 (comparison)
    ')'         reduce using rule 33 (comparison)
    $default    reduce using rule 40 (expression)


State 47

   34 comparison: function •
   52 expression: function •

    LOGICAL_OP  reduce using rule 34 (comparison)
    ')'         reduce using rule 34 (comparison)
    $default    reduce using rule 52 (expression)


State 48

   29 if_statement: IF '(' comparison • ')' '{' statement_list '}' ELSE '{' statement_list '}'
   30             | IF '(' comparison • ')' '{' statement_list '}'
   32 comparison: comparison • LOGICAL_OP comparison

    LOGICAL_OP  shift, and go to state 72
    ')'         shift, and go to state 73


State 49

   31 comparison: expression • RELATIONAL_OP expression
   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression

    RELATIONAL_OP  shift, and go to state 74
    BITWISE_OP     shift, and go to state 57
    TERNARY_OP     shift, and go to state 58
    '+'            shift, and go to state 59
    '-'            shift, and go to state 60
    '*'            shift, and go to state 61
    '/'            shift, and go to state 62


State 50

   32 comparison: comparison • LOGICAL_OP comparison
   35 loop_statement: WHILE '(' comparison • ')' '{' statement_list '}'

    LOGICAL_OP  shift, and go to state 72
    ')'         shift, and go to state 75


State 51

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   47           | PREPROCESSOR_OP expression •
   49           | expression • TERNARY_OP expression ':' expression

    TERNARY_OP  shift, and go to state 58

    $default  reduce using rule 47 (expression)


State 52

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   48           | UNARY_OP expression •
   49           | expression • TERNARY_OP expression ':' expression

    TERNARY_OP  shift, and go to state 58

    $default  reduce using rule 48 (expression)


State 53

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression
   50           | '(' expression • ')'

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    ')'         shift, and go to state 76


State 54

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression
   53 expression_list: expression •

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62

    $default  reduce using rule 53 (expression_list)


State 55

   51 expression: '{' expression_list • '}'
   54 expression_list: expression_list • ',' expression

    ','  shift, and go to state 77
    '}'  shift, and go to state 78


State 56

   46 expression: identifier INC_DEC_OP •

    $default  reduce using rule 46 (expression)


State 57

   45 expression: expression BITWISE_OP • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 79


State 58

   49 expression: expression TERNARY_OP • expression ':' expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 80


State 59

   41 expression: expression '+' • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 81


State 60

   42 expression: expression '-' • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 82


State 61

   43 expression: expression '*' • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 83


State 62

   44 expression: expression '/' • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 84


State 63

   36 return_statement: RETURN expression ';' •

    $default  reduce using rule 36 (return_statement)


State 64

   10 declaration: type id_list ';' •

    $default  reduce using rule 10 (declaration)


State 65

   15 id_list: id_list ',' • identifier

    ID  shift, and go to state 85

    identifier  go to state 86


State 66

   27 attribution: identifier ASSIGN_OP expression •
   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62

    $default  reduce using rule 27 (attribution)


State 67

   26 attribution: identifier '=' expression • ';'
   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    ';'         shift, and go to state 87


State 68

   17 identifier: ID '[' NUM ']' •

    $default  reduce using rule 17 (identifier)


State 69

   24 parameter: type ID •

    $default  reduce using rule 24 (parameter)


State 70

   18 function: ID '(' parameter_list_opt ')' • '{' statement_list '}'
   19         | ID '(' parameter_list_opt ')' • ';'

    ';'  shift, and go to state 88
    '{'  shift, and go to state 89


State 71

   23 parameter_list: parameter_list ',' • parameter

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    TYPE             shift, and go to state 2
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    type        go to state 41
    identifier  go to state 28
    function    go to state 29
    parameter   go to state 90
    expression  go to state 45


State 72

   32 comparison: comparison LOGICAL_OP • comparison

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 46
    function    go to state 47
    comparison  go to state 91
    expression  go to state 49


State 73

   29 if_statement: IF '(' comparison ')' • '{' statement_list '}' ELSE '{' statement_list '}'
   30             | IF '(' comparison ')' • '{' statement_list '}'

    '{'  shift, and go to state 92


State 74

   31 comparison: expression RELATIONAL_OP • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 93


State 75

   35 loop_statement: WHILE '(' comparison ')' • '{' statement_list '}'

    '{'  shift, and go to state 94


State 76

   50 expression: '(' expression ')' •

    $default  reduce using rule 50 (expression)


State 77

   54 expression_list: expression_list ',' • expression

    ID               shift, and go to state 1
    NUM              shift, and go to state 21
    STRING_LITERAL   shift, and go to state 22
    PREPROCESSOR_OP  shift, and go to state 23
    UNARY_OP         shift, and go to state 24
    '('              shift, and go to state 26
    '{'              shift, and go to state 27

    identifier  go to state 28
    function    go to state 29
    expression  go to state 95


State 78

   51 expression: '{' expression_list '}' •

    $default  reduce using rule 51 (expression)


State 79

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   45           | expression BITWISE_OP expression •
   49           | expression • TERNARY_OP expression ':' expression

    TERNARY_OP  shift, and go to state 58

    BITWISE_OP  error (nonassociative)

    $default  reduce using rule 45 (expression)


State 80

   41 expression: expression • '+' expression
   42           | expression • '-' expression
   43           | expression • '*' expression
   44           | expression • '/' expression
   45           | expression • BITWISE_OP expression
   49           | expression • TERNARY_OP expression ':' expression
   49           | expression TERNARY_OP expression • ':' expression

    BITWISE_OP  shift, and go to state 57
    TERNARY_OP  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    ':'         shift, and go to state 96


State 81
